--- a/data_visualization.ipynb
+++ b/data_visualization.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUqXIZICSsYk6976P5Yj20",
+      "authorship_tag": "ABX9TyN4FvakQh4dPW1/LPFoEylI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -236,8 +236,8 @@
     {
       "cell_type": "code",
       "source": [
-        "pd.set_option('display.max_columns',None)\n",
-        "pd.set_option('display.max_rows',None)\n",
+        "# pd.set_option('display.max_columns',None)\n",
+        "# pd.set_option('display.max_rows',None)\n",
         "df = pd.read_csv('crypto_daily_prices.csv')\n",
         "df"
       ],
